# algorithms

./: CMakeLists.txt  README.md  main.c
C/: Contents.md  README.md
CircularLinkedList/: CircularLinkedList.c  CircularLinkedList.h  main.c
CircularLinkedList/EDMundo/: CircularLinkedList.c  CircularLinkedList.h  main.c
CircularLinkedList/Igualdade/: CircularLinkedList.c  CircularLinkedList.h  main.c
DoublyLinkedList/: DoublyLinkedList.c  DoublyLinkedList.h  main.c
DoublyLinkedList/gigantes/: doubly_linked_list.c  doubly_linked_list.h  main.c  program
Java/: README.md
Javascript/: Content.md
LinkedList/: LinkedList.c  LinkedList.h  main.c
LinkedList/ToninhoTrocador/: LinkedList.c  LinkedList.h  main.c
MyFirst/: MyFirst.cpp  MyFirst.sln  MyFirst.vcxproj  MyFirst.vcxproj.filters  Second.cpp  Source1.cpp
Python/: README.md
Queues/: Queues.c  main.c
Queues/Cartas/: main.c
Queues/StaticQueues/: Makefile  StaticQueues.c  main.c  program
Queues/pix/: main.c  program
Stack/: Stack.c  Stack.h  main.c
Stack/StaticStack/: Stack.c  Stack.h
apps/: circular_linked_list.c  doubly_linked_list.c  ed_mundo.c  igualdade.c  linked_list.c  queues_app.c  stack_app.c  stack_digits_app.c  stack_stack_app.c  static_queues.c  toninho_trocador.c
includes/: CircularLinkedList.h  EDCircularLinkedList.h  IgualdadeCircularLinkedList.h  LinkedList.h  Queues.h  Stack.h  StaticQueues.h  TLinkedList.h  static_stack.h
src/: CircularLinkedList.c  DoublyLinkedList.c  EDCircularLinkedList.c  IgualdadeCircularLinkedList.c  LinkedList.c  Queues.c  Stack.c  StackDigits.c  StaticQueues.c  TLinkedList.c  static_stack.c
stack_digits/: Makefile  Stack.c  Stack.h  main.c  program  test.sh
stack_digits/testes/: 1.in  1.in-out
